changes for trip service completion
